[Bug #21026] no singleton method on pseudo variable literal